Final changes for November 29, 1996 checkpoint.

--- a/src/attic/TODO
+++ b/src/attic/TODO
@@ -1,19 +1,30 @@
 Quixadhal's List of Impossible Tasks:
 
-o Remove all unused functions from the source.
-o Remove anything that is #ifdef'd out.
-o Rewrite all "stupid" functions like MAX() and str_cmp().
-o Finish rebalancing spell code.
-o Create calling interfaces for non-implemented spells.
-o Finish druid class.
-o Move fighters/ranger/thief skills into a single table with mage/clerics.
-o Redefine the costs and levels for the spells... some powerful ones are
+_ Remove all unused functions from the source.
+_ Remove anything that is #ifdef'd out.
+_ Rewrite all "stupid" functions like MAX() and str_cmp().
+_ Finish rebalancing spell code.
+_ Create calling interfaces for non-implemented spells.
+_ Finish druid class.
+x Move fighters/ranger/thief spells into a single table with mage/clerics.
+_ Redefine the costs and levels for the spells... some powerful ones are
   acquired too soon, some wimpy ones take too long to get.
-o Make all the wizard commands have a common interface style.
-o Update documentation!!!
-o Change the way skills are handled.  Entires already exist in the spell
+_ Make all the wizard commands have a common interface style.
+_ Update documentation!!!
+x Change the way skills are handled.  Entires already exist in the spell
   lists, so let's use them!  Create function pointers to the skills so that
   the actual application of a skill calls the function.  This way we can
   encode levels and mana costs in here.. we just need to have a way to
   prevent people from "cast 'hide' self".
-o Lots more to list, but this is a start.
+_ Finish ascii rent-object routines.
+_ Rewrite ascii character routines so they don't use char_file_u.
+_ Fix bugs in zone reset commands... loss of hate flags etc...
+_ Create new monster class... give mobs classes and make them use them!
+_ Add more randomness to zone files.... give a percentage chance for some
+  mobs/objects... make sure some items always get reloaded.
+_ make weather DO something!
+_ change spell handling routines so they have a consistant interface... that
+  is, make them all have before/after messages that can be read from a file
+  like the poses.
+_ make emotes a file-based system so we don't have to hardcode them into the
+  stupid interpreter loop.
